--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroui/avatar": "^2.2.20",
     "@heroui/button": "2.2.24",
     "@heroui/card": "^2.2.23",
+    "@heroui/chip": "^2.2.20",
     "@heroui/code": "2.2.18",
     "@heroui/dropdown": "^2.3.24",
     "@heroui/form": "^2.1.24",
