Improve auth env docs and add image gallery HTML
Updated README.md and env.example with clearer instructions for production authentication and Google OAuth setup. Improved the X link in Footer.tsx for better accessibility. Added imagest.html with a gallery of generated images. Minor update to lib/auth.ts (details not shown in diff).

--- a/env.example
+++ b/env.example
@@ -10,9 +10,11 @@ GOOGLE_CLIENT_ID=xxx
 GOOGLE_CLIENT_SECRET=xxx
 
 # BETTER-AUTH
-NEXT_PUBLIC_BETTER_AUTH_URL=http://localhost:3000   #Client-side auth URL
-BETTER_AUTH_SECRET=xxx
-BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app
+BETTER_AUTH_SECRET=xxx # Generate a secure random string for production
+# CRITICAL: For production, set both URLs to your production domain (e.g., https://yourdomain.com)
+# For local development, use http://localhost:3000
+NEXT_PUBLIC_APP_URL=http://localhost:3000 # Used by both client and server
+BETTER_AUTH_URL=http://localhost:3000 # Fallback server URL
 
 # STRIPE
 STRIPE_SECRET_KEY=xxx
@@ -29,3 +31,9 @@ EMAIL_FROM_NAME=yourproject
 EMAIL_REPLY_TO=noreply@yourproject.com
 ZEPTOMAIL_API_URL=api.zeptomail.ca/
 ZEPTO_MAIL_API_KEY=Zoho-enczapikey xxx
+
+# PRODUCTION DEPLOYMENT:
+# See README.md for detailed setup instructions including:
+# - Google OAuth configuration
+# - Environment variable requirements  
+# - Stripe webhook setup
