--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "stripe": "^18.4.0",
     "zeptomail": "^6.2.1",
