--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@heroui/modal": "^2.2.21",
     "@heroui/navbar": "2.2.22",
     "@heroui/select": "^2.4.25",
+    "@heroui/skeleton": "^2.2.17",
     "@heroui/snippet": "2.2.25",
     "@heroui/spinner": "^2.2.21",
     "@heroui/switch": "2.2.22",
@@ -43,6 +44,7 @@
     "better-auth": "^1.3.4",
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
+    "gsap": "^3.13.0",
     "intl-messageformat": "10.7.16",
     "next": "15.3.1",
     "next-themes": "0.4.6",
