--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@prisma/client": "^6.13.0",
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.26",
-    "@stripe/stripe-js": "^7.8.0",
+    "@stripe/stripe-js": "7.8.0",
     "better-auth": "^1.3.4",
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
@@ -52,7 +52,7 @@
     "react-dom": "18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
-    "stripe": "^18.4.0",
+    "stripe": "19.2.0",
     "zeptomail": "^6.2.1",
     "zod": "^4.0.15",
     "zustand": "^5.0.7"
