--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fal-ai/client": "^1.6.1",
     "@fal-ai/server-proxy": "^1.1.1",
+    "@heroicons/react": "^2.2.0",
     "@heroui/accordion": "^2.2.21",
     "@heroui/alert": "^2.2.24",
     "@heroui/avatar": "^2.2.20",
